<resources>
    <string name="app_name">Trabalho1</string>
    <string name="cadastro_de_reserva">Cadastro de Reserva</string>
    <string name="cadastrar_participante">Cadastrar Participante</string>
    <string name="cadastrar_livro">Cadastrar Livro</string>
    <string name="title_activity_cadastrar_participante">CadastrarParticipante</string>
    <string name="title_activity_cadastrar_livro">cadastrarLivro</string>
    <string name="title_activity_cadastrar_reserva">CadastrarReserva</string>
    <string name="ano">Ano</string>
    <string name="editora">Editora</string>
    <string name="salvar">Salvar</string>
    <string name="titulo">Titulo</string>
    <string name="name">Name</string>
    <string name="nome">Nome</string>
    <string name="ok">OK</string>
    <string name="reservar">Reservar</string>
    <string name="livro">Livro</string>
    <string name="participante">Participante</string>
    <string name="title_activity_atividade">Atividade</string>
</resources>
